20-deployment-strategies/ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  type: NodePort
  ports:
    - name: http
      port: 4000
      targetPort: http
  selector:
    app: api
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
spec:
  rules:
    - host: monitored.api.com
      http:
        paths:
          - path: /
            backend:
              serviceName: api
              servicePort: 4000
